--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,15 @@
 title: Praveen Ranolia
 theme: jekyll-theme-minimal
 logo: assets/photo.png
-minima: 
-skin: dark 
 
-# Include custom CSS files
-include:  
-  - assets/css/darkmode.css
-# title: Praveen Ranolia
-# remote_theme: jekyll/minima
-# plugins:
-#   - jekyll-remote-theme
-# minima:
-#   skin: dark # or auto if you want it to switch with your system settings.
+include:
+  - assets/css/dark-mode.css
+
+defaults:
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: default
 
 
