--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@ logo: assets/photo.png
 include:
   - assets/css/dark-mode.css
 
-# defaults:
-#   - scope:
-#       path: ""
-#       type: "pages"
-#     values:
-#       layout: default
+defaults:
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: default
 
 
